# oferandgalex1

./: > test_redirection3.tmp  CMakeLists.txt  Commands.cpp  Commands.h  signals.cpp  smash  smash.cpp  test_redirection3.tmp  tmp.txt
tests/outputs/: test_2020_jobs.err.processed  test_2020_jobs.out.processed  test_2020_kill.err.processed  test_2020_kill.out.processed  test_2020_redirect.err  test_2020_redirect.err.processed  test_2020_redirect.out  test_2020_redirect.out.processed  test_2020_showpid.err.processed  test_2020_showpid.out  test_2020_showpid.out.processed  test_2020_timeout.err  test_2020_timeout.err.processed  test_2020_timeout.out  test_2020_timeout.out.processed  test_bg1.out  test_bg1.out.processed  test_bg2.out.processed  test_bg5.out  test_bg5.out.processed  test_bg_errors.out.processed  test_external1.err.processed  test_external1.out  test_fg.err.processed  test_fg.out  test_fg.out.processed  test_fg2.out  test_fg2.out.processed  test_fg3.err  test_fg3.err.processed  test_fg3.out  test_fg3.out.processed  test_fg4.err.processed  test_fg4.out  test_fg4.out.processed  test_fg5.out  test_fg5.out.processed  test_fg_errors.out  test_input1.out.processed  test_input_almog.out.processed  (+32 more)
